--- a/parts/reddit/rpage.jade
+++ b/parts/reddit/rpage.jade
@@ -82,7 +82,7 @@ template(name='rpage')
                 // if skv_is 'view_section' 'tags'
                 if skv_is 'view_section' 'comments'
                     +rcomments_tab
-            .three.wide.column
+            .three.wide.column.scrolling
                 a.ui.basic.fluid.button(href=data.url target="_window" title=data.url) 
                     i.external.icon
                     |url
