--- a/parts/reddit/subreddit.jade
+++ b/parts/reddit/subreddit.jade
@@ -204,7 +204,7 @@ template(name='subreddit_newest')
        
    
 template(name='sub_post_card')
-    .ui.card
+    .ui.card.smallscroll
         // .ui.stackable.equal.width.compact.grid
         //     .row
         if embed
@@ -345,7 +345,7 @@ template(name='sub_unpick_tag')
         
 template(name='flat_sub_tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    .ui.basic.compact.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+    .ui.basic.image.label.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
