--- a/parts/stack/site.jade
+++ b/parts/stack/site.jade
@@ -249,7 +249,7 @@ template(name='s_q_item')
                     .item created {{ufrom creation_date}}
             +doc_emotion_small
             each tags
-                .ui.label #{this}
+                .ui.basic.small.label #{this}
                 // .ui.label user_id #{user_id}
             // .ui.divider
 template(name='stag_picker')
