filtered pubs for user posts and comments,

--- a/client/style.css
+++ b/client/style.css
@@ -748,7 +748,7 @@ input {
     /*z-index:1001;*/
     /*margin-top: 1em; */
     /*padding-top: .5em; */
-    padding: 2em;
+    /*padding: 2em;*/
     /*padding-left: 1em;*/
 }
 .forty {
