--- a/client/nav.jade
+++ b/client/nav.jade
@@ -11,7 +11,7 @@ template(name='nav')
             i.large.fire.icon
         // a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
         //     i.stack.exchange.large.icon
-        a.icon.item.blink.clear(href="/rusers" class="{{isActiveRoute 'stack'}}")
+        a.icon.item.blink.clear(href="/rusers" class="{{isActiveRoute 'rusers'}}")
             i.users.large.icon
         // .item(title='session karma')
         //     i.grey.lightning.icon
