--- a/parts/reddit/ruser.jade
+++ b/parts/reddit/ruser.jade
@@ -40,9 +40,9 @@ template(name='ruser')
                         i.external.icon
                     +print_this
                     +ruser_top_emotions     
+                .thirteen.wide.column
                     each tags
                         .ui.basic.label.search_tag #{this}
-                .thirteen.wide.column
                     if selected_ruser_post_tags
                         each selected_ruser_post_tags
                             +ruser_post_unselect_tag
@@ -116,7 +116,7 @@ template(name='ruser_post')
             a.view_post(href="/r/#{data.subreddit}/post/#{_id}" class=post_header_class)
                 img.ui.rounded.inline.zoomer.image.zoomer(src=data.thumbnail)    
 
-        a.ui.small.inline.header(href="/r/#{data.subreddit}/post/#{_id}")
+        a.ui.small.inline.header(href="/r/#{data.subreddit}/post/#{_id}" class=post_header_class)
             |#{data.ups}
             |#{data.link_title} #{data.title}
         a.ui.label(href="/r/#{data.subreddit}") #{subreddit}
