--- a/parts/reddit/rusers.jade
+++ b/parts/reddit/rusers.jade
@@ -3,6 +3,7 @@ template(name='rusers')
         .three.wide.column.scrolling
             .ui.inline.header 
                 i.users.icon
+                |#{users.count}
                 | users
             // i.tag.large.icon
             .ui.small.fluid.icon.input
@@ -63,7 +64,7 @@ template(name='rusers')
                     +ruser_small
                     
 template(name='ruser_small')
-    .three.wide.column
+    .four.wide.column
         a.select_user(href="/ruser/#{username}")
             img.ui.circular.small.image.zoomer(src=data.snoovatar_img)
         .content
@@ -85,12 +86,12 @@ template(name='ruser_small')
                 span(title='created')
                     i.grey.clock.icon
                     | {{ufrom data.created}}
-                .ui.label(title='accept rate') #{accept_rate}%
+                // .ui.label(title='accept rate') #{accept_rate}%
                 // .ui.circular.compact.basic.button.set_location
                 //     i.grey.marker.icon
                 //     |!{location}
                 each ten_tags
-                    .ui.small.compact.tertiary.button.add_tag #{this}
+                    .ui.small.basic.label.add_tag #{this}
                 if user_top_emotion
                     .ui.inline.header #{user_top_emotion}
                 +ruser_top_emotion_small
@@ -112,23 +113,23 @@ template(name='ruser_karma_sort_button')
             
 template(name='ruser_top_emotion_small')
     .ui.basic.label {{ to_percent avg_sent_score}} sentiment
-    .ui.green.small.label
+    .ui.green.small.basic.label
         | {{ to_percent avg_joy_score}}% joy
         | {{fixed0 rep_joy}} ##{global_joy_rep_rank}
 
-    .ui.blue.small.label
+    .ui.blue.small.basic.label
         |{{fixed0 rep_sadness}} sad
         | {{ to_percent avg_sadness_score}}% ##{global_sadness_rep_rank}
 
-    .ui.red.small.label 
+    .ui.red.small.basic.label 
         | {{ to_percent avg_anger_score}}% anger
         | {{fixed0 rep_anger}} rep ##{global_anger_rep_rank}
 
-    .ui.orange.small.label
+    .ui.orange.small.basic.label
         |{{fixed0 rep_disgust}} disgust
         | {{ to_percent avg_disgust_score}}% ##{global_disgust_rep_rank}
 
-    .ui.grey.small.label
+    .ui.grey.small.basic.label
         |{{fixed0 rep_fear}} fear
         | {{ to_percent avg_fear_score}}% ##{global_fear_rep_rank}
                 
