--- a/parts/reddit/rpage.jade
+++ b/parts/reddit/rpage.jade
@@ -10,7 +10,7 @@ template(name='rpage')
                     |!{data.title} #{data.link_title}
                 .ui.basic.circular.compact.small.button.get_post
                     i.external.icon
-                    |#{permalink}
+                    |#{data.permalink}
                 div
                 // if skv_is 'view_section' 'main'
                 .scrolling
