--- a/parts/reddit/rusers.jade
+++ b/parts/reddit/rusers.jade
@@ -1,4 +1,4 @@
-template(name='rusers')
+template(name='users')
     .ui.stackable.padded.grid
         .three.wide.column.scrolling
             .ui.inline.header 
