--- a/parts/reddit/search.jade
+++ b/parts/reddit/search.jade
@@ -1,71 +1,70 @@
 template(name='home')
     .ui.stackable.grid
-        .sixteen.wide.column
-            // if skv_is 'nightmode' true
-            //     i.moon.link.icon.toggle_nightmode
-            // else
-            //     i.lightbulb.link.icon.toggle_nightmode
-            unless picked_tags
-                .ui.center.aligned.basic.segment
-                    .ui.icon.big.input
-                        i.search.icon
-                        input.search_tag(type='text' value=query autofocus='' placeholder="search...")
-            if picked_tags
-                .ui.icon.input
-                    if is_loading
-                        i.loading.yin.yang.icon
-                    else
-                        i.search.icon
-                    input.search_tag(type='text' value=query autofocus='' placeholder="#{post_count}")
-                    // .ui.label #{this}
-                
-                // if many_tags
-                //     a#clear_tags.ui.red.invert.icon.button.pick_term
-                //         i.remove.icon
-                each picked_tags
-                    +unpick_tag
-            each result_tags
-                // .ui.label #{this}
-                +tag_picker
-                // .ui.label(title=count) #{name}
-        .ui.four.wide.column                
-            .scrolling
-                .ui.items
-                    +alpha
-                    each wikis
-                        .ui.card
-                            if watson.metadata.image
-                                // a(href=url target='_window')
-                                img.ui.image.toggle_view(src=watson.metadata.image)
-                            .content
-                                i.large.wikipedia.icon
-                                a.ui.inline.header(href=url target='_window') #{title}
-                                a.black_text(href=url target='_window')
-                                    |{{ trunc analyzed_text }}...
-                                each ten_tags
-                                    +flat_tag_picker
-                                    // .ui.label.flat_tag_pick #{this}
-                // if one_post
-                //     .ui.stackable.one.column.grid
-                //         each rposts
-                //             +card
-                        
-                // else if two_posts
-                //     .ui.stackable.two.centered.column.grid
-                //         each rposts
-                //             +card
-                //     // else if three_posts
+        .row
+            .sixteen.wide.column
+                // if skv_is 'nightmode' true
+                //     i.moon.link.icon.toggle_nightmode
                 // else
-        .ui.twelve.wide.column                
-            .ui.stackable.two.column.centered.grid.scrolling
+                //     i.lightbulb.link.icon.toggle_nightmode
+                unless picked_tags
+                    .ui.center.aligned.basic.segment
+                        .ui.icon.big.input
+                            i.search.icon
+                            input.search_tag(type='text' value=query autofocus='' placeholder="search...")
+                if picked_tags
+                    .ui.icon.input
+                        if is_loading
+                            i.loading.yin.yang.icon
+                        else
+                            i.search.icon
+                        input.search_tag(type='text' value=query autofocus='' placeholder="#{post_count}")
+                        // .ui.label #{this}
+                    
+                    // if many_tags
+                    //     a#clear_tags.ui.red.invert.icon.button.pick_term
+                    //         i.remove.icon
+                    each picked_tags
+                        +unpick_tag
+                    each result_tags
+                        // .ui.label #{this}
+                        +tag_picker
+                        // .ui.label(title=count) #{name}
+        .row
+            .ui.four.wide.column
+                +alpha
+                each wikis
+                    .ui.card
+                        if watson.metadata.image
+                            // a(href=url target='_window')
+                            img.ui.image.toggle_view(src=watson.metadata.image)
+                        .content
+                            i.large.wikipedia.icon
+                            a.ui.inline.header(href=url target='_window') #{title}
+                            a.black_text(href=url target='_window')
+                                |{{ trunc analyzed_text }}...
+                            each ten_tags
+                                +flat_tag_picker
+                                // .ui.label.flat_tag_pick #{this}
+                    // if one_post
+                    //     .ui.stackable.one.column.grid
+                    //         each rposts
+                    //             +card
+                            
+                    // else if two_posts
+                    //     .ui.stackable.three.centered.column.grid
+                    //         each rposts
+                    //             +card
+                        // else if three_posts
+                    // else
+            .ui.twelve.wide.column                
                 each rposts
                     +card
-            //     .ui.basic.center.aligned.segment
-            //         i.big.loading.yin.yang.icon
+                //     .ui.basic.center.aligned.segment
+                //         i.big.loading.yin.yang.icon
    
 
 template(name='card')
-    .column
+    .frour.wide.column.smallscroll
         // .ui.stackable.equal.width.compact.grid
         //     .row
         a.goto_post.pointer.zoomer
