--- a/parts/reddit/subreddit.jade
+++ b/parts/reddit/subreddit.jade
@@ -7,7 +7,7 @@ template(name='subreddit')
             .twelve.wide.column.seg
                 // img(src=data.banner_img)
                 // img(src=banner_background_image)
-                a.ui.basic.compact.icon.button(href="/reddit")
+                a.ui.basic.compact.icon.button(href="/")
                     i.large.chevron.left.grey.icon
                     i.large.reddit.icon
                     // img.ui.mini.inline.image(src=icon_img)
@@ -86,7 +86,7 @@ template(name='subreddit')
                     i.globe.icon
                     |domains
                 each subreddit_domain_tags
-                    .ui.compact.basic.button.select_domain(class=domain_selector_class)
+                    .ui.basic.label.select_domain(class=domain_selector_class)
                         |#{name} 
                         small #{count}
                 div
@@ -94,7 +94,7 @@ template(name='subreddit')
                     i.clock.large.icon    
                     |time tags
                 each subreddit_time_tags
-                    .ui.compact.basic.button.select_time_tag(class=domain_selector_class)
+                    .ui.basic.label.select_time_tag(class=domain_selector_class)
                         |#{name} 
                         small #{count}
                 // .ui.inline.header.pull_latest #{display_name}
@@ -104,20 +104,20 @@ template(name='subreddit')
                 +subreddit_best
                 +subreddit_newest
                 with emotion_avg
-                    // .ui.list
-                    //     .item {{ to_percent avg_sent_score}}% sentiment
-                    //     .item {{ to_percent avg_joy_score}}% joy
-                    //     .item {{ to_percent avg_anger_score}}% anger
-                    //     .item {{ to_percent avg_sadness_score}}% sad
-                    //     .item {{ to_percent avg_disgust_score}}% disgust
-                    //     .item {{ to_percent avg_fear_score}}% fear
-                    // if is_positive
-                    //     span.say.ui.green.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}% positive
-                    //         |&nbsp;
-                    //     div.rounded(style="height:5px;width:{{to_percent doc_sentiment_score}}%;background-color:green" title="{{to_percent doc_sentiment_score}}% #{doc_sentiment_label}")
-                    // else
-                    //     span.say.ui.red.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}%  negative
-                    //         |&nbsp;
+                    .ui.list
+                        .item {{ to_percent avg_sent_score}}% sentiment
+                        .item {{ to_percent avg_joy_score}}% joy
+                        .item {{ to_percent avg_anger_score}}% anger
+                        .item {{ to_percent avg_sadness_score}}% sad
+                        .item {{ to_percent avg_disgust_score}}% disgust
+                        .item {{ to_percent avg_fear_score}}% fear
+                    if is_positive
+                        span.say.ui.green.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}% positive
+                            |&nbsp;
+                        div.rounded(style="height:5px;width:{{to_percent doc_sentiment_score}}%;background-color:green" title="{{to_percent doc_sentiment_score}}% #{doc_sentiment_label}")
+                    else
+                        span.say.ui.red.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}%  negative
+                            |&nbsp;
                     //     div.rounded(style="height:5px;width:{{abs_percent doc_sentiment_score}}%;background-color:red" title="{{abs_percent doc_sentiment_score}}% #{doc_sentiment_label}")
                     span.say.ui.green.text(class="{{calculated_size avg_sent_score}}") {{ to_percent avg_sent_score }}% sentiment 
                         |&nbsp;
@@ -326,16 +326,16 @@ template(name='subreddit_doc_item')
 
 template(name='sub_tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.basic.compact.button.zoomer.select_sub_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.basic.image.large.label.select_sub_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
-                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+                img.ui.image.superzoom(src=term.watson.metadata.image )    
         strong #{name}
         // if in_dev
         //     small #{count}
         
 template(name='sub_unpick_tag')
-    a.unselect_sub_tag.ui.black.compact.button(href='#')
+    a.unselect_sub_tag.ui.black.image.label(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
