--- a/parts/reddit/subreddit.jade
+++ b/parts/reddit/subreddit.jade
@@ -1,70 +1,70 @@
 template(name='subreddit')
     unless subreddit_doc
         .ui.basic.center.aligned.segment
-            i.massive.yin.yang.link.grey.icon.get_info.shadowed2
+            i.massive.yin.yang.link.loading.grey.icon.get_info.shadowed2
     with subreddit_doc
         .ui.stackable.grid(style="background-image:url(#{data.banner_img}); margin-top:0px;, background-size:cover;, background-repeat: no-repeat; min-width: 100%; ")
             .twelve.wide.column.seg
                 // img(src=data.banner_img)
                 // img(src=banner_background_image)
                 a.ui.basic.compact.icon.button(href="/")
-                    i.large.chevron.left.grey.icon
-                    i.large.reddit.icon
+                    i.chevron.left.grey.icon
+                    i.reddit.icon
                     // img.ui.mini.inline.image(src=icon_img)
                 img.get_info.shadowed.ui.inline.image(src=logo_url )
                 .ui.inline.header.get_info #{data.display_name}
-                if selected_sub_tags
+                if picked_sub_tags
                     // if many_tags
                     //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
                     //         i.remove.icon
-                    each selected_sub_tags
+                    each picked_sub_tags
                         +sub_unpick_tag
                 .ui.icon.input
                     i.search.icon
                     input.search_subreddit(type='text')
                 each subreddit_result_tags
                     // .ui.label #{this}
-                    +sub_tag_selector
-                    // .ui.large.label(title=count) #{name}
+                    +sub_tag_picker
+                    // .ui.label(title=count) #{name}
                 div
                 .ui.inline.header #{post_count}
                 if skv_is 'sort_direction' 1
-                    .ui.icon.compact.basic.button.sort_down
+                    .ui.icon.basic.label.sort_down
                         i.caret.down.icon
                 else
-                    .ui.icon.compact.basic.button.sort_up
+                    .ui.icon.basic.label.sort_up
                         i.caret.up.icon
-                .ui.compact.basic.small.button.limit_1
+                .ui.compact.basic.label.limit_1
                     |1
-                .ui.compact.basic.small.button.limit_10
+                .ui.compact.basic.label.limit_10
                     |10
-                .ui.icon.compact.large.basic.small.button.sort_created(class=sort_created_class)
+                .ui.icon.compact.basic.small.button.sort_created(class=sort_created_class)
                     i.clock.icon
-                .ui.icon.compact.large.basic.small.button.sort_ups(class=sort_ups_class)
+                .ui.icon.compact.basic.small.button.sort_ups(class=sort_ups_class)
                     i.thumbs.up.icon
                 if skv_is 'view_detail' true
-                    .ui.black.compact.button.toggle_detail
-                        i.list.large.icon
+                    .ui.black.compact.label.toggle_detail
+                        i.list.icon
                         |detail
                 else
-                    .ui.compact.basic.button.toggle_detail
-                        i.minus.large.icon
+                    .ui.compact.basic.label.toggle_detail
+                        i.minus.icon
                         |simple
                     // i.line.chart.icon
                 if skv_is 'subreddit_view_layout' 'grid'
-                    .ui.compact.large.button.set_grid(class=grid_class) 
-                        i.th.large.icon
+                    .ui.compact.label.set_grid(class=grid_class) 
+                        i.th.icon
                         |grid
                 else
-                    .ui.icon.compact.large.button.set_grid(class=grid_class) 
-                        i.th.large.icon
+                    .ui.icon.compact.label.set_grid(class=grid_class) 
+                        i.th.icon
                 if skv_is 'subreddit_view_layout' 'list'
-                    .ui.compact.large.button.set_list(class=list_class)
-                        i.list.large.icon
+                    .ui.compact.label.set_list(class=list_class)
+                        i.list.icon
                         |list
                 else
-                    .ui.icon.compact.large.button.set_list(class=list_class)
-                        i.list.large.icon
+                    .ui.icon.compact.label.set_list(class=list_class)
+                        i.list.icon
                 .scrolling
                     if sub_docs
                         if skv_is 'subreddit_view_layout' 'grid'
@@ -91,7 +91,7 @@ template(name='subreddit')
                         small #{count}
                 div
                 .ui.inline.header
-                    i.clock.large.icon    
+                    i.clock.icon    
                     |time tags
                 each subreddit_time_tags
                     .ui.basic.label.select_time_tag(class=domain_selector_class)
@@ -225,7 +225,7 @@ template(name='sub_post_card')
         //         a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
         //             img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
         .content
-            a.ui.small.header.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+            a.ui.small.header.view_post.zoomer(href="/r/#{data.subreddit}/post/#{_id}" class=post_header_class)
                 |!{data.title} 
             | #{data.ups}
             i.thumbs.up.outline.grey.icon
@@ -285,7 +285,7 @@ template(name='subreddit_doc_item')
                 small ({{long_date data.created}})
             .ui.label(title='domain') #{data.domain}
             // each tags
-            //     +flat_sub_tag_selector
+            //     +flat_sub_tag_picker
             if in_dev
                 +print_this
             // if watson
@@ -316,7 +316,7 @@ template(name='subreddit_doc_item')
             //         |!{data.body_html}
             
             each tags
-                +flat_sub_tag_selector
+                +flat_sub_tag_picker
             if watson
                 +doc_emotion_small
             a.ui.inline.header(href="/ruser/#{data.author}")
@@ -324,9 +324,9 @@ template(name='subreddit_doc_item')
     
 
 
-template(name='sub_tag_selector')
+template(name='sub_tag_picker')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.basic.image.large.label.select_sub_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.basic.image.label.select_sub_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.image.superzoom(src=term.watson.metadata.image )    
@@ -343,7 +343,7 @@ template(name='sub_unpick_tag')
 
         
         
-template(name='flat_sub_tag_selector')
+template(name='flat_sub_tag_picker')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
     .ui.basic.image.label.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
